--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "/dist/server.js",
   "scripts": {
-    "dev:start": "tsx watch src/server.ts",
+    "dev:start": "tsx watch src/server.ts | npx pino-pretty",
     "dev:test": "mocha --import=tsx src/**/*.test.ts",
-    "knex": "NODE_OPTIONS='--import tsx --no-warnings' knex"
+    "knex": "NODE_OPTIONS='--import tsx --no-warnings' knex",
+    "knex:migrate": "NODE_OPTIONS='--import tsx --no-warnings' knex migrate:latest",
+    "knex:rollback": "NODE_OPTIONS='--import tsx --no-warnings' knex migrate:rollback"
   },
   "keywords": [],
   "author": "",
@@ -15,20 +17,24 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/chai": "^5.2.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/node": "^25.0.10",
     "@types/supertest": "^6.0.3",
     "chai": "^6.2.2",
     "mocha": "^11.7.5",
+    "pino-pretty": "^13.1.3",
     "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@fastify/jwt": "^10.0.0",
     "bcrypt": "^6.0.0",
     "fastify": "^5.7.1",
     "fastify-plugin": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
   }
